fix contact page nav link contrast and heading structure

--- a/styles/scss/pages/_contact.scss
+++ b/styles/scss/pages/_contact.scss
@@ -12,7 +12,7 @@
     }
 
     
-    h2 {
+    h1 {
       color: $color-light;
       margin-bottom: 15rem;
     }
@@ -115,7 +115,7 @@
     // --------------480px HEADER
     header {
 
-      h2 {
+      h1 {
         font-size: calc(3.1rem + 3.1vw);
         margin-bottom: 7rem;
       }
